# maili

./: 404.html  CHANGELOG.md  CONTRIBUTING.html  Cargo.toml  Justfile  LICENSE.html  README.md  RELEASES.md  cliff.toml  deny.toml  dist-workspace.toml  glossary.html  index.html  intro.html  print.html  release.toml  searchindex.js  searchindex.json  starting.html
.config/: zepter.yaml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml  config.yml
.github/workflows/: ci.yml  coverage.yml  lint.yml  publish.yml
book/: README.md  book.toml
book/src/: CONTRIBUTING.md  LICENSE.md  SUMMARY.md  glossary.md  intro.md  links.md  starting.md
book/src/building/: README.md
book/src/building/protocol/: batches.md
book/src/examples/: README.md
building/: consensus.html  engine.html  index.html
building/genesis/: index.html  rollup-config.html  system-config.html
building/protocol/: batches.html  block-info.html  channels.html  frames.html  index.html
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs  superchain.rs  transaction.rs
crates/common/src/deposit/: envelope.rs  mod.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: lib.rs  op_transaction.rs
crates/consensus/src/deposit/: envelope.rs  mod.rs  source.rs
crates/consensus/src/hardforks/: ecotone.rs  fjord.rs  forks.rs
crates/flz/: Cargo.toml  README.md
crates/flz/src/: lib.rs
crates/genesis/: Cargo.toml  README.md
crates/genesis/src/: accounts.rs  altda.rs  chain.rs  chain_ids.rs  constants.rs  genesis.rs  hardforks.rs  lib.rs  params.rs  rollup.rs  superchain.rs  system.rs
crates/genesis/src/chain/: addresses.rs  altda.rs  config.rs  hardfork.rs  mod.rs  roles.rs  superchain.rs
crates/genesis/src/superchain/: config.rs
crates/genesis/src/system/: config.rs  eip1559.rs  errors.rs  gas_limit.rs  log.rs  mod.rs  updates.rs
crates/genesis/src/updates/: batcher.rs  eip1559.rs  gas_config.rs  gas_limit.rs  operator_fee.rs
crates/interop/: Cargo.toml  README.md
crates/interop/src/: constants.rs  errors.rs  lib.rs  message.rs  root.rs  supervisor.rs
crates/maili/: Cargo.toml  README.md
crates/maili/src/: lib.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/examples/: batch_to_frames.rs  frames_to_batch.rs
crates/protocol/src/: block.rs  channel.rs  channel_out.rs  deposits.rs  errors.rs  fee.rs  lib.rs  predeploys.rs  test_utils.rs  utils.rs
crates/protocol/src/batch/: core.rs  inclusion.rs  mod.rs  reader.rs  reqwest.rs  single.rs  span.rs  traits.rs  transactions.rs
crates/protocol/src/batch/tx_data/: eip7702.rs  wrapper.rs
crates/protocol/src/compression/: variant.rs
crates/protocol/src/compression/brotli/: compress.rs  decompress.rs
crates/protocol/src/info/: bedrock.rs  deposit_context.rs  ecotone.rs  errors.rs  fjord.rs  interop.rs  isthmus.rs  mod.rs  variant.rs
crates/protocol/src/interop/: graph.rs  message.rs  mod.rs  super_root.rs  test_utils.rs  traits.rs
crates/protocol/src/messages/: events.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: lib.rs
crates/provider/src/ext/: engine.rs  mod.rs
crates/registry/: Cargo.toml  Justfile  README.md  build.rs  configs.json
crates/registry/etc/: configs.json
crates/registry/src/: lib.rs  superchain.rs
crates/registry/src/test_utils/: base_mainnet.rs  base_sepolia.rs  op_mainnet.rs  op_sepolia.rs
crates/registry/superchain/: Cargo.toml  README.md
crates/registry/superchain/src/: lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc-jsonrpsee/: Cargo.toml  README.md
crates/rpc-jsonrpsee/src/: lib.rs  traits.rs
crates/rpc-types-engine/: Cargo.toml  README.md
crates/rpc-types-engine/src/: lib.rs
crates/rpc/src/: api.rs  attributes.rs  lib.rs  net.rs  response.rs  superchain.rs  supervisor.rs  sync.rs  traits.rs
crates/rpc/src/js_types/: config.rs  mod.rs  net.rs  output.rs  safe_head.rs  superchain.rs  sync.rs
crates/serde/: Cargo.toml  README.md
crates/serde/src/: lib.rs  quantity.rs
examples/: batch-to-frames.html  frames-to-batch.html  index.html  load-a-rollup-config.html  new-l1-block-info-tx-hardfork.html
scripts/: check_no_std.sh
