[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.11"
edition = "2021"
rust-version = "1.81"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/op-rs/maili"
repository = "https://github.com/op-rs/maili"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# Workspace
maili-rpc = { version = "0.1.11", path = "crates/rpc", default-features = false }
maili-serde = { version = "0.1.11", path = "crates/serde", default-features = false }
maili-interop = { version = "0.1.11", path = "crates/interop", default-features = false }
maili-genesis = { version = "0.1.11", path = "crates/genesis", default-features = false }
maili-protocol = { version = "0.1.11", path = "crates/protocol", default-features = false }
maili-registry = { version = "0.1.11", path = "crates/registry", default-features = false }
maili-superchain = { version = "0.1.11", path = "crates/registry/superchain", default-features = false }

# OP Alloy
op-alloy-flz = { version = "0.10.0", default-features = false }
op-alloy-consensus = { version = "0.10.0", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.10.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.10.0", default-features = false }

# Alloy
alloy-eips = { version = "0.11.0", default-features = false }
alloy-serde = { version = "0.11.0", default-features = false }
alloy-signer = { version = "0.11.0", default-features = false }
alloy-network = { version = "0.11.0", default-features = false }
alloy-provider = { version = "0.11.0", default-features = false }
alloy-transport = { version = "0.11.0", default-features = false }
alloy-consensus = { version = "0.11.0", default-features = false }
alloy-rpc-client = { version = "0.11.0", default-features = false }
alloy-rpc-types-eth = { version = "0.11.0", default-features = false }
alloy-rpc-types-engine = { version = "0.11.0", default-features = false }
alloy-network-primitives = { version = "0.11.0", default-features = false }

# Alloy RLP
alloy-rlp = { version = "0.3.11", default-features = false }

# Alloy Core
alloy-sol-types = { version = "0.8.18", default-features = false }
alloy-primitives = { version = "0.8.18", default-features = false }

# Revm
revm = { version = "19.4.0", default-features = false }

# Serde
serde_repr = "0.1.19"
serde = { version = "1.0.217", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_with = "3.12.0"
serde_json = { version = "1.0.138", default-features = false, features = ["alloc"] }

# Encoding
toml = { version = "0.8.19", default-features = false }
snap = "1.1.1"
bincode = "1.3.3"
ethereum_ssz = "0.8.2"

# Compression
miniz_oxide = "0.8.3"
alloc-no-stdlib = "2.0.4"
brotli = { version = "7.0.0", default-features = false }
getrandom = { version = "0.2.15", features = ["js"] } # required for brotli to wasm32-unknown-unknown

# rpc
jsonrpsee = { version = "0.24.8", features = [
    "jsonrpsee-core",
    "client-core",
    "server-core",
    "macros",
] }
jsonrpsee-core = "0.24.8"
jsonrpsee-types = "0.24.8"

# misc
cfg-if = "1.0.0"
async-trait = "0.1.85"
unsigned-varint = "0.8.0"
spin = { version = "0.9.8", features = ["mutex"] }
lazy_static = { version = "1.5.0", default-features = false }
derive_more = { version = "1.0.0", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
similar-asserts = "1.6.1"

# tracing
tracing-subscriber = "0.3.19"
tracing = { version = "0.1.41", default-features = false }

## misc-testing
arbitrary = { version = "1.4.1", features = ["derive"] }
arbtest = "0.3.2"
rand = { version = "0.9.0", default-features = false }
proptest = "1.6.0"
proptest-derive = "0.5.1"
tokio = "1.43.0"
rstest = "0.24.0"

## crypto
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
