[package]
name = "maili-common"
description = "Optimism common types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-primitives.workspace = true

# serde
serde = { workspace = true, optional = true }

# misc
derive_more = { workspace = true, default-features = false, features = ["display", "from"] }

[features]
default = ["std", "serde"]
std = ["alloy-primitives/std"]
serde = [
  "dep:serde",
  "alloy-primitives/serde"
]
