[package]
name = "maili-common"
description = "Optimism common types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true

# `serde` feature
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }

# `arbitrary` feature
arbitrary = { workspace = true, features = ["derive"], optional = true }

# misc
derive_more = { workspace = true, default-features = false, features = ["display", "from"] }

[dev-dependencies]
bincode.workspace = true
rand.workspace = true

[features]
default = ["std", "serde"]
std = [
  "alloy-primitives/std",
  "alloy-serde/std",
  "alloy-eips/std",
  "alloy-consensus/std",
  "alloy-rlp/std",
]
serde = [
  "dep:serde",
  "alloy-serde",
  "alloy-primitives/serde"
]
serde-bincode-compat = [
  "serde",
  "arbitrary",
  "dep:serde_with"
]
arbitrary = [
  "std",
  "dep:arbitrary",
  "alloy-consensus/arbitrary",
  "alloy-primitives/arbitrary",
  "alloy-eips/arbitrary",
]
