[package]
name = "maili-genesis"
description = "Optimism genesis types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

# Misc
thiserror.workspace = true
derive_more.workspace = true

# `revm` feature
revm = { workspace = true, optional = true, features = ["optimism"] }

# `arbitrary` feature
arbitrary = { workspace = true, features = ["derive"], optional = true }

# `serde` feature
serde = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
maili-serde = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["thread_rng"] }
serde_json.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["rand", "arbitrary"] }
toml = { workspace = true, features = ["parse"] }

[features]
default = ["serde", "std"]
revm = ["dep:revm"]
std = [
	"alloy-primitives/std",
	"alloy-sol-types/std",
	"alloy-consensus/std",
	"alloy-eips/std",
	"maili-serde?/std",
	"serde?/std",
	"thiserror/std"
]
arbitrary = [
    "std",
    "dep:arbitrary",
    "alloy-consensus/arbitrary",
    "alloy-eips/arbitrary",
    "alloy-primitives/rand",
    "alloy-primitives/arbitrary",
]
serde = [
	"dep:serde",
	"dep:serde_repr",
	"dep:maili-serde",
	"alloy-primitives/serde",
	"alloy-eips/serde",
	"alloy-consensus/serde",
]
