[package]
name = "maili"
description = "Connect applications to the OP Stack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Workspace
maili-consensus = { workspace = true, optional = true }
maili-protocol = { workspace = true, optional = true }
maili-registry = { workspace = true, optional = true }
maili-rpc = { workspace = true, optional = true }
maili-genesis  = { workspace = true, optional = true }

[features]
default = ["std", "serde"]

std = [
  "maili-protocol?/std",
  "maili-registry?/std",
  "maili-consensus?/std",
  "maili-genesis?/std",
]

full = [
  "common",
  "protocol",
  "registry",
  "rpc",
  "genesis",
]

arbitrary = [
  "maili-protocol?/arbitrary",
  "maili-genesis?/arbitrary",
]

serde = [
  "maili-protocol?/serde",
  "maili-consensus?/serde",
  "maili-genesis?/serde",
]

jsonrpsee = ["maili-rpc?/jsonrpsee"]

# `no_std` support
registry = ["dep:maili-registry"]
protocol = ["dep:maili-protocol"]
common = ["dep:maili-consensus"]
genesis = ["dep:maili-genesis"]

# std features
rpc = ["dep:maili-rpc"]
