[package]
name = "maili"
description = "Connect applications to the OP Stack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Workspace
maili-protocol = { workspace = true, optional = true }
maili-registry = { workspace = true, optional = true }
maili-rpc = { workspace = true, optional = true }
maili-genesis  = { workspace = true, optional = true }

[features]
default = ["std", "serde"]

std = [
  "maili-protocol?/std",
  "maili-registry?/std",
  "maili-genesis?/std",
]

full = [
  "protocol",
  "registry",
  "rpc",
  "genesis",
]

arbitrary = [
  "maili-protocol?/arbitrary",
  "maili-genesis?/arbitrary",
]

serde = [
  "maili-protocol?/serde",
  "maili-genesis?/serde",
]

jsonrpsee = ["maili-rpc?/jsonrpsee"]

# `no_std` support
registry = ["dep:maili-registry"]
protocol = ["dep:maili-protocol"]
genesis = ["dep:maili-genesis"]

# std features
rpc = ["dep:maili-rpc"]
