[package]
name = "maili-registry"
description = "A registry of superchain configs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
maili-superchain.workspace = true
maili-genesis = { workspace = true, features = ["serde"] }

# Alloy
alloy-primitives = { workspace = true, features = ["map"] }

# `serde`
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["raw_value"] }

# misc
lazy_static = { workspace = true, features = ["spin_no_std"] }

[build-dependencies]
toml = { workspace = true, features = ["parse"] }
maili-superchain.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
maili-genesis = { workspace = true, features = ["serde"] }

[dev-dependencies]
alloy-eips.workspace = true

[features]
default = ["std", "map-foldhash"]
map-hashbrown = ["alloy-primitives/map-hashbrown"]
map-foldhash = ["alloy-primitives/map-foldhash"]
std = [
	"maili-genesis/std",
	"serde_json/std",
	"alloy-primitives/std",
	"maili-superchain/std",
	"serde/std"
]
