[package]
name = "maili-rpc"
description = "Optimism RPC API"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
maili-protocol = { workspace = true, features = ["serde"] }

# Alloy
alloy-eips = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }

# `interop` feature
async-trait = { workspace = true, optional = true }
maili-interop = { workspace = true, features = ["serde"], optional = true }
alloy-rpc-client = { workspace = true, features = ["reqwest"], optional = true }

# RPC
jsonrpsee = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true } # req for wasm32-unknown-unknown
serde.workspace = true

# Misc
derive_more = { workspace = true, default-features = false, features = ["display", "from"] }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std", "jsonrpsee"]
std = [
    "maili-protocol/std",
    "alloy-eips/std",
    "alloy-primitives/std",
]
interop = [
    "dep:maili-interop",
    "dep:alloy-rpc-client",
    "dep:async-trait",
]
jsonrpsee = [
    "dep:jsonrpsee",
    "dep:getrandom",
]
client = [
    "jsonrpsee",
    "jsonrpsee/client",
    "jsonrpsee/async-client",
]
