[package]
name = "maili-rpc"
description = "Optimism RPC Types and API"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
maili-protocol.workspace = true

# OP Alloy
op-alloy-rpc-types-engine.workspace = true

# Alloy
alloy-eips = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }
alloy-sol-types = { workspace = true }

# Misc
derive_more = { workspace = true, default-features = false, features = ["display", "from"] }
thiserror = { workspace = true }

# `serde`
serde = { workspace = true, optional = true }

# `jsonrpsee`
jsonrpsee = { workspace = true, optional = true }
jsonrpsee-core = "0.24.8"
getrandom = { workspace = true, optional = true, features = ["js"] } # req for wasm32-unknown-unknown
maili-genesis = { workspace = true, optional = true }
op-alloy-rpc-jsonrpsee = { workspace = true, optional = true }

# `interop` feature
async-trait = { workspace = true, optional = true }
maili-interop = { workspace = true, features = ["serde"], optional = true }
alloy-rpc-client = { workspace = true, features = ["reqwest"], optional = true }

# `client` feature
tokio = { workspace = true, features = ["time"], optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std", "jsonrpsee", "interop"]
std = [
	"maili-protocol/std",
	"maili-genesis?/std",
	"alloy-eips/std",
	"alloy-primitives/std",
	"op-alloy-rpc-types-engine/std",
	"derive_more/std",
	"maili-interop?/std",
	"serde?/std",
]
serde = [
	"dep:serde",
	"maili-protocol/serde",
	"maili-genesis?/serde",
	"alloy-eips/serde",
	"alloy-primitives/serde",
	"op-alloy-rpc-types-engine/serde",
	"maili-interop?/serde"
]
interop = [
    "dep:maili-interop",
    "dep:alloy-rpc-client",
    "dep:async-trait",
]
jsonrpsee = [
    "serde",
    "dep:maili-genesis",
    "dep:jsonrpsee",
    "dep:getrandom",
    "dep:op-alloy-rpc-jsonrpsee",
]
client = [
    "jsonrpsee",
    "jsonrpsee/client",
    "jsonrpsee/async-client",
    "op-alloy-rpc-jsonrpsee/client",
    "tokio",
]
